--- a/code/Avtoservis/public/css/styles.css
+++ b/code/Avtoservis/public/css/styles.css
@@ -1,6 +1,81 @@
 html, body {
-    background-color: #fff;
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
+}
+
+.margin-top-navbar {
+    margin-top: 90px !important;
+}
+
+/* .full-height {
+    height: 100vh;
+} */
+
+.title {
+    font-size: 48px;
+}
+
+#home-page {
+    background-image: url('https://images.pexels.com/photos/164634/pexels-photo-164634.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-size: cover;
+}
+
+/*
+.links > a {
+    color: #636b6f;
+    padding: 0 25px;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+} */
+
+.btn {
+    -webkit-transition: all 0.2s ease-in-out !important;
+    -moz-transition: all 0.2s ease-in-out !important;
+    -o-transition: all 0.2s ease-in-out !important;
+    transition: all 0.2s ease-in-out !important;
+    -webkit-border-radius: 999em !important;
+    -moz-border-radius: 999em !important;
+    border-radius: 999em !important;
+    background-image: url("../img/btn-shine.png") !important;
+    background-position: 50px top !important;
+    background-repeat: no-repeat !important;
+}
+
+.btn-padding {
+    padding: 15px 30px 15px 30px;
+}
+
+.topBarCreate {
+    background-position: 5px top !important;
+    /*padding: 0.8rem 1rem;*/
+    padding: 0.5rem 0.7rem;
+    box-shadow: 0 10px 20px #CCC;
+}
+
+.btn:hover {
+    background-position: 15px top !important;
+}
+
+.topBarCreate:hover {
+    box-shadow: 0px 0px 10px #CCC;
+    background-position: -10px top !important;
+}
+
+.jumbotron-fluid {
+    border-radius: 15px !important;
+}
+
+.login_form {
+    border-radius: 15px;
+}
+
+#scroll_to_top {
+    position: fixed !important;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999 !important;
 }
